# EventTech-Manager

./: .gitignore  ARBEITSWEISE.md  CLAUDE.md  DEPLOY.md  HANDOVER.md  IDEAS.md  PLAN-FABLE5.md  PLAN-MEIN-PLAN.md  PLAN-NEUAUSRICHTUNG.md  PLAN-UI-NEUSCHNITT.md  PLAN-V1-ABSICHERN.md  README.md  ROADMAP.md  WORKFLOW.md  download  package.json  pnpm-lock.yaml  skills-lock.json
.claude/: launch.json  settings.json
.claude/agents/: migrations-pruefer.md
.claude/hooks/: block-service-role.mjs  check-migration.mjs
.github/workflows/: ci.yml  db-backup.yml  db-migrate.yml
apps/web/: .env.example  .eslintrc.cjs  CLAUDE.md  capacitor.config.ts  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  wrangler.toml
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/src/: lib.rs  main.rs
docs/: UI-REVIEW-2026-07-18.md
docs/archiv/: HANDOVER.md  PLAN-PROFI-ANSICHTEN.md
docs/mockups/: VISION-dashboard-hell.md  dashboard-hell.html  konzept-gesamt.html
supabase/: BOOTSTRAP_ADMIN.md  config.toml
supabase/migrations/: 0001_phase1_schema.sql  0002_rls_policies.sql  0003_storage_buckets.sql  0004_tasks.sql  0005_job_colors_and_milestones.sql  0006_disable_rls_local_dev.sql  0007_task_checklist.sql  0008_public_photos_bucket.sql  0009_stock_quantity_and_sets.sql  0010_rental_price_and_stammkunde.sql  0011_offers.sql  0012_auth_roles_and_access.sql  (+27 more)
tunnel/: README.md  config.example.yml  feed-proxy.mjs  start-test-tunnel.ps1
(+180 files in other folders)
